--- a/src/index.scss
+++ b/src/index.scss
@@ -36,6 +36,9 @@
   font-weight: 700;
 }
 
+html {
+  overflow-y: scroll;
+}
 body {
   font-family: "Inter";
 }
